deploy: 807d73171dadde21479f82e391ec41f53ab0a23b

--- a/_downloads/6c8a751a95e4cbae2803e2f5a14ede13/numpy_integration.ipynb
+++ b/_downloads/6c8a751a95e4cbae2803e2f5a14ede13/numpy_integration.ipynb
@@ -15,7 +15,7 @@
       },
       "outputs": [],
       "source": [
-        "import numpy as np\nfrom scipy import signal\nfrom apytypes import APyFixedArray, convolve\nimport matplotlib.pyplot as plt\n\nsig = np.repeat([0.0, 1.0, 0.0], 100)\nsig_fx = APyFixedArray.from_float(sig, 12, 2)\n\nwin = signal.windows.hann(50)\nwin_fx = APyFixedArray.from_float(win, 10, 2)\n\nfiltered = signal.convolve(sig, win, mode=\"same\") / sum(win)\nfiltered_fx = convolve(sig_fx, win_fx, mode=\"same\") / sum(win_fx)"
+        "import numpy as np\nfrom scipy import signal\nimport apytypes as apy\nimport matplotlib.pyplot as plt\n\nsig = np.repeat([0.0, 1.0, 0.0], 100)\nsig_fx = apy.fx(sig, bits=12, int_bits=2)\n\nwin = signal.windows.hann(50)\nwin_fx = apy.fx(win, bits=10, int_bits=2)\n\nfiltered = signal.convolve(sig, win, mode=\"same\") / sum(win)\nfiltered_fx = apy.convolve(sig_fx, win_fx, mode=\"same\") / sum(win_fx)"
       ]
     },
     {
