--- a/_downloads/d17aab42b6fd9a26adc96c3bdc6bba7e/apyfloat.ipynb
+++ b/_downloads/d17aab42b6fd9a26adc96c3bdc6bba7e/apyfloat.ipynb
@@ -15,7 +15,7 @@
       },
       "outputs": [],
       "source": [
-        "from apytypes import APyFloat\n\na = APyFloat(True, 3, 5, 4, 5)\na"
+        "import apytypes as apy\n\na = apy.APyFloat(True, 3, 5, 4, 5)\na"
       ]
     },
     {
@@ -26,7 +26,7 @@
       },
       "outputs": [],
       "source": [
-        "b = APyFloat.from_float(2.25, 3, 2)\nb"
+        "b = apy.APyFloat.from_float(2.25, 3, 2)\nb"
       ]
     },
     {
@@ -37,7 +37,7 @@
       },
       "outputs": [],
       "source": [
-        "c = APyFloat.from_bits(int(\"10110101\"), 3, 4)\nc"
+        "c = apy.APyFloat.from_bits(int(\"10110101\"), 3, 4)\nc"
       ]
     },
     {
@@ -138,7 +138,7 @@
       },
       "outputs": [],
       "source": [
-        "b + APyFloat.from_float(1.125, exp_bits=b.exp_bits, man_bits=b.man_bits, bias=b.bias)"
+        "b + apy.fp(1.125, exp_bits=b.exp_bits, man_bits=b.man_bits, bias=b.bias)"
       ]
     },
     {
@@ -156,7 +156,7 @@
       },
       "outputs": [],
       "source": [
-        "2 + 2 + APyFloat.from_float(8, exp_bits=4, man_bits=1)"
+        "2 + 2 + apy.fp(8, exp_bits=4, man_bits=1)"
       ]
     },
     {
@@ -174,7 +174,7 @@
       },
       "outputs": [],
       "source": [
-        "APyFloat.from_float(8, exp_bits=4, man_bits=1) + 2 + 2"
+        "apy.fp(8, exp_bits=4, man_bits=1) + 2 + 2"
       ]
     },
     {
