--- a/_downloads/2cae3500da720d045fddba63b9a7af26/apyfixed.ipynb
+++ b/_downloads/2cae3500da720d045fddba63b9a7af26/apyfixed.ipynb
@@ -15,7 +15,14 @@
       },
       "outputs": [],
       "source": [
-        "from apytypes import APyFixed\n\na = APyFixed(7, 4, 2)\na"
+        "import apytypes as apy\n\na = apy.APyFixed(7, 4, 2)\na"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Create a APyFixed from a floating-point number\n\n"
       ]
     },
     {
@@ -26,7 +33,14 @@
       },
       "outputs": [],
       "source": [
-        "b = APyFixed.from_float(-2.25, int_bits=3, frac_bits=2)\nb"
+        "b = apy.APyFixed.from_float(-2.25, int_bits=3, frac_bits=2)\nb"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "There is also a convenience method that does this\n\n"
       ]
     },
     {
@@ -37,7 +51,18 @@
       },
       "outputs": [],
       "source": [
-        "c = APyFixed.from_str(\"3.75\", bits=6, frac_bits=3)\nc"
+        "b = apy.fx(-2.25, int_bits=3, frac_bits=2)\nb"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false
+      },
+      "outputs": [],
+      "source": [
+        "c = apy.APyFixed.from_str(\"3.75\", bits=6, frac_bits=3)\nc"
       ]
     },
     {
@@ -145,7 +170,7 @@
       },
       "outputs": [],
       "source": [
-        "b + APyFixed.from_float(3.5, int_bits=b.int_bits, frac_bits=b.frac_bits)"
+        "b + apy.fx(3.5, int_bits=b.int_bits, frac_bits=b.frac_bits)"
       ]
     },
     {
@@ -163,7 +188,7 @@
       },
       "outputs": [],
       "source": [
-        "1.25 + 1.25 + APyFixed.from_float(2, int_bits=4, frac_bits=1)"
+        "1.25 + 1.25 + apy.fx(2, int_bits=4, frac_bits=1)"
       ]
     },
     {
@@ -181,7 +206,7 @@
       },
       "outputs": [],
       "source": [
-        "APyFixed.from_float(2, int_bits=4, frac_bits=1) + 1.25 + 1.25"
+        "apy.fx(2, int_bits=4, frac_bits=1) + 1.25 + 1.25"
       ]
     },
     {
