deploy: 902b955b89b05942f7bdd99b73ce9a18bacd863b

--- a/_downloads/4cfac77f9d94b4d258ee368487d4b60c/reciprocal_lookup.ipynb
+++ b/_downloads/4cfac77f9d94b4d258ee368487d4b60c/reciprocal_lookup.ipynb
@@ -15,7 +15,7 @@
       },
       "outputs": [],
       "source": [
-        "import apytypes as apy\nimport numpy as np\nimport matplotlib.pyplot as plt\n\nN = 6\nWL = 9\n\nstep = apy.APyFixed(1, 3, N)\nr = apy.arange(1, 2 + 2**-6, step=step)\n\ntable = apy.zeros((2**6,), 1, WL)\nfloat_table = []\nfor i in range(2**6):\n    start = float(r[i])\n    stop = float(r[i + 1])\n\n    meanreciprocal = (1 / start + 1 / stop) / 2\n    float_table.append(meanreciprocal)\n    table[i] = apy.fx(meanreciprocal, 1, WL)"
+        "import matplotlib.pyplot as plt\nimport numpy as np\n\nimport apytypes as apy\n\nN = 6\nWL = 9\n\nstep = apy.APyFixed(1, 3, N)\nr = apy.arange(1, 2 + 2**-6, step=step)\n\ntable = apy.zeros((2**6,), 1, WL)\nfloat_table = []\nfor i in range(2**6):\n    start = float(r[i])\n    stop = float(r[i + 1])\n\n    meanreciprocal = (1 / start + 1 / stop) / 2\n    float_table.append(meanreciprocal)\n    table[i] = apy.fx(meanreciprocal, 1, WL)"
       ]
     },
     {
@@ -69,7 +69,7 @@
       },
       "outputs": [],
       "source": [
-        "points = 10000\n\n\ndef eval_seed(x, table):\n    table_row = x.man >> (23 - N)  # N most significant bits of x\n    new_exp = 253 - x.exp\n    new_man = (table[table_row].to_bits() & ((1 << (WL - 1)) - 1)) << (23 - WL + 1)\n    res = apy.APyFloat(x.sign, new_exp, new_man, 8, 23)\n    return res\n\n\nfval = np.linspace(1, 2, points)\nseed_table = apy.zeros((points,), exp_bits=8, man_bits=23)\nnr_table = apy.zeros((points,), exp_bits=8, man_bits=23)\n\nfor i in range(points):\n    x = apy.fp(fval[i], 8, 23)\n    seed = eval_seed(x, table)\n    seed_table[i] = seed\n    # Perform one Newton-Raphson iteration\n    refined = seed + seed * (1 - seed * x)\n    nr_table[i] = refined"
+        "points = 10000\n\n\ndef eval_seed(x, table):\n    table_row = x.man >> (23 - N)  # N most significant bits of x\n    new_exp = 253 - x.exp\n    new_man = (table[table_row].to_bits() & ((1 << (WL - 1)) - 1)) << (23 - WL + 1)\n    return apy.APyFloat(x.sign, new_exp, new_man, 8, 23)\n\n\nfval = np.linspace(1, 2, points)\nseed_table = apy.zeros((points,), exp_bits=8, man_bits=23)\nnr_table = apy.zeros((points,), exp_bits=8, man_bits=23)\n\nfor i in range(points):\n    x = apy.fp(fval[i], 8, 23)\n    seed = eval_seed(x, table)\n    seed_table[i] = seed\n    # Perform one Newton-Raphson iteration\n    refined = seed + seed * (1 - seed * x)\n    nr_table[i] = refined"
       ]
     },
     {
