deploy: 4b7450715c8c47d2a44c106c489ac8054507c6ed

--- a/_downloads/95cd391970f13461ba86e0fd415cb9b3/test_fp8_mul.ipynb
+++ b/_downloads/95cd391970f13461ba86e0fd415cb9b3/test_fp8_mul.ipynb
@@ -33,7 +33,7 @@
       },
       "outputs": [],
       "source": [
-        "def test_fp8_mul() -> None:\n    \"\"\"\n    Simulate the floating-point multiplier using the Python runner.\n\n    This file can be run directly or via pytest discovery.\n    \"\"\"\n    sim = os.getenv(\"SIM\", \"nvc\")\n\n    dir_path = (\n        os.path.dirname(os.path.realpath(__file__))\n        if \"__file__\" in globals()\n        else Path.cwd()\n    )\n    sources = [f\"{dir_path}/fp8_multiplier.vhdl\"]\n\n    runner = get_runner(sim)\n    runner.build(\n        sources=sources,\n        hdl_toplevel=\"fp8_multiplier\",\n    )\n\n    runner.test(hdl_toplevel=\"fp8_multiplier\", test_module=\"test_fp8_mul\")\n\n\nif __name__ == \"__main__\":\n    if shutil.which(\"nvc\"):\n        test_fp8_mul()\n    else:\n        print(\"NVC not found\")"
+        "def test_fp8_mul() -> None:\n    \"\"\"\n    Simulate the floating-point multiplier using the Python runner.\n\n    This file can be run directly or via pytest discovery.\n    \"\"\"\n    sim = os.getenv(\"SIM\", \"nvc\")\n\n    dir_path = (\n        Path(__file__).resolve().parent if \"__file__\" in globals() else Path.cwd()\n    )\n    sources = [f\"{dir_path}/fp8_multiplier.vhdl\"]\n\n    runner = get_runner(sim)\n    runner.build(\n        sources=sources,\n        hdl_toplevel=\"fp8_multiplier\",\n    )\n\n    runner.test(hdl_toplevel=\"fp8_multiplier\", test_module=\"test_fp8_mul\")\n\n\nif __name__ == \"__main__\":\n    if shutil.which(\"nvc\"):\n        test_fp8_mul()\n    else:\n        print(\"NVC not found\")"
       ]
     },
     {
