deploy: 9d77a1dc0a300ea334896fd7fe2ac549457e31be

--- a/_downloads/4cfac77f9d94b4d258ee368487d4b60c/reciprocal_lookup.ipynb
+++ b/_downloads/4cfac77f9d94b4d258ee368487d4b60c/reciprocal_lookup.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# Reciprocal lookup table\n\nIn this example a lookup table for floating-point reciprocals is designed,\nassuming that each bit is implemented using an N-\u00ednput LUT, suitable for FPGA, and\nsingle-precision floating-point representation.\n"
+        "\n# Reciprocal lookup table\n\nIn this example a lookup table for floating-point reciprocals is designed,\nassuming that each bit is implemented using an N-input LUT, suitable for FPGA, and\nsingle-precision floating-point representation.\n"
       ]
     },
     {
