--- a/_downloads/6c8a751a95e4cbae2803e2f5a14ede13/numpy_integration.ipynb
+++ b/_downloads/6c8a751a95e4cbae2803e2f5a14ede13/numpy_integration.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# NumPy integration\n\nIt is possible to easily go between numpy and apytypes and therefore also use plotting tools like Matplotlib in an integrated manner.\n\nConsider the example from https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.convolve.html implemented using fixed-point arithmetic\n"
+        "\n# NumPy integration\n\nIt is possible to easily go between NumPy and APyTypes and therefore also use plotting tools like Matplotlib in an integrated manner.\n\nConsider the example from https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.convolve.html implemented using fixed-point arithmetic\n"
       ]
     },
     {
