deploy: 0f898f0cbf806de4c26a4cbd3c214c4575481ffb

--- a/_downloads/e4dfd9716732211876c7f347d3e08d3d/ode_solver.ipynb
+++ b/_downloads/e4dfd9716732211876c7f347d3e08d3d/ode_solver.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n# Floating-point ODE solver\n\nThis illustrates the effect of solving an ODE with forward Euler\nusing different floating-point formats and different quantization schemes.\n\nThe ODE in question is\n\n\\begin{align}u'(t) = v(t), \\quad u(0) = 1,\n\n   v'(t) = -u(t), \\quad v(0) = 0,\\end{align}\n\nand the solution is the unit circle in the (u, v) plane.\n\n(Example was inspired from M. Croci, M. Fasi, N. J Higham, T. Mary, M. Mikaitis. \"Stochastic Rounding: Implementation, Error Analysis, and Applications\", in *Royal Society Open Science*, 2022.)\n"
+        "\n# Floating-point ODE solver\n\nThis illustrates the effect of solving an ODE with forward Euler\nusing different floating-point formats and different quantization schemes.\n\nThe ODE in question is\n\n\\begin{align}u'(t) = v(t), \\quad u(0) = 1,\n\n   v'(t) = -u(t), \\quad v(0) = 0,\\end{align}\n\nand the solution is the unit circle in the (u, v) plane.\n\n(Example inspired from M. Croci, M. Fasi, N. J Higham, T. Mary, M. Mikaitis. \"Stochastic Rounding: Implementation, Error Analysis, and Applications\", in *Royal Society Open Science*, 2022.)\n"
       ]
     },
     {
