--- a/_downloads/4cfac77f9d94b4d258ee368487d4b60c/reciprocal_lookup.ipynb
+++ b/_downloads/4cfac77f9d94b4d258ee368487d4b60c/reciprocal_lookup.ipynb
@@ -15,7 +15,7 @@
       },
       "outputs": [],
       "source": [
-        "import matplotlib.pyplot as plt\nimport numpy as np\n\nimport apytypes as apy\n\nN = 6\nWL = 9\n\nstep = apy.APyFixed(1, 3, N)\nr = apy.arange(1, 2 + 2**-6, step=step)\n\ntable = apy.zeros((2**6,), 1, WL)\nfloat_table = []\nfor i in range(2**6):\n    start = float(r[i])\n    stop = float(r[i + 1])\n\n    meanreciprocal = (1 / start + 1 / stop) / 2\n    float_table.append(meanreciprocal)\n    table[i] = apy.fx(meanreciprocal, 1, WL)"
+        "import matplotlib.pyplot as plt\nimport numpy as np\n\nimport apytypes as apy\n\nN = 6\nWL = 9\n\nstep = apy.APyFixed(1, 3, N)\nr = apy.arange(1, 2 + 2**-6, step=step)\n\ntable = apy.zeros((2**6,), int_bits=1, frac_bits=WL)\nfloat_table = []\nfor i in range(2**6):\n    start = float(r[i])\n    stop = float(r[i + 1])\n\n    meanreciprocal = (1 / start + 1 / stop) / 2\n    float_table.append(meanreciprocal)\n    table[i] = apy.fx(meanreciprocal, 1, WL)"
       ]
     },
     {
