deploy: 7073956cc36f72db5b44a35549ac5b951d45c460

--- a/_downloads/2dda482b521af00739685cad5c275e5f/approximate_multiplication.ipynb
+++ b/_downloads/2dda482b521af00739685cad5c275e5f/approximate_multiplication.ipynb
@@ -33,7 +33,7 @@
       },
       "outputs": [],
       "source": [
-        "fig, ax = plt.subplots()\n\nax.set_xlabel(r\"$x$\")\nax.set_ylabel(r\"$y$\")\nax.set_aspect(\"equal\")\n\nax.xaxis.set_major_locator(ticker.MultipleLocator(2 * 2**-MAN_BITS))\nax.yaxis.set_major_locator(ticker.MultipleLocator(2 * 2**-MAN_BITS))\n\npcol = ax.pcolormesh(\n    xx.to_numpy(), yy.to_numpy(), error.to_numpy(), ec=\"k\", lw=0.1, cmap=\"Blues_r\"\n)\ncbar = fig.colorbar(pcol)\ncbar.ax.set_title(\"Error\")\n\nplt.show()"
+        "fig, ax = plt.subplots()\n\nax.set_xlabel(r\"$x$\")\nax.set_ylabel(r\"$y$\")\nax.set_aspect(\"equal\")\n\nax.xaxis.set_major_locator(ticker.MultipleLocator(2 * 2**-MAN_BITS))\nax.yaxis.set_major_locator(ticker.MultipleLocator(2 * 2**-MAN_BITS))\n\npcol = ax.pcolormesh(xx, yy, error, ec=\"k\", lw=0.1, cmap=\"Blues_r\")\ncbar = fig.colorbar(pcol)\ncbar.ax.set_title(\"Error\")\n\nplt.show()"
       ]
     }
   ],
